--- a/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
@@ -308,7 +308,8 @@
                             <p:tooltip  for="verificarEmpleados" value="#{msg['verificarempleados']}" />
 
                             <p:commandButton icon="ui-icon-extlink" style="display: inline-block; position: relative; left: 300px; top: 0px; height: 30px; width: 130px; background-image: url(Imagenes/Iconos/boton.png); color: white;
-                                             background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="adicionarEmpleado" value="Adicionar" onclick="buscarEmpleadoDialogo.show();" process="@this"/>
+                                             background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="adicionarEmpleado" value="Adicionar" actionListener="#{controlParametro.cargarLovEmpleados()}" 
+                                             onclick="operacionEnProceso.show()" oncomplete="buscarEmpleadoDialogo.show(); operacionEnProceso.hide()" process="@this"/>
                             <p:tooltip  for="adicionarEmpleado" value="#{msg['adicionarempleado']}" />
                         </fieldset>
 
@@ -638,6 +639,11 @@
                     <p:dialog id="lovVacia" header="#{msg['atencion']}" widgetVar="lovVacia"  resizable="false" draggable="false" modal="true" height="100" width="400px"  closable="true">  
                         <h:graphicImage value="Imagenes/Iconos/alerta.png" width="110" height="80" style="position: absolute; left: 5px; top: 20px;"  />
                         <h:outputText value="#{msg['lovvacia']}" style="position: absolute; left: 110px; top: 20px; width: 270px; font-weight:bold; text-align: center" />
+                    </p:dialog>
+                    
+                    <p:dialog id="operacionEnProceso" header="#{msg['informacion']}" widgetVar="operacionEnProceso"  resizable="false" draggable="false" modal="true" height="65" width="350px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/Iconos/cargando.gif" width="50" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="#{msg['operacionProceso']}" style="font-size: 12px; position: absolute; left: 95px; top: 20px; width: 240px; font-weight:bold;" />
                     </p:dialog>
                 </h:form>
 
