--- a/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
@@ -102,8 +102,12 @@
 
                                 <div>
                                     <h:outputText id="informacionComprobante"  value="#{controlComprobantes.infoRegistroComprobante}" style="position: absolute; left: 480px; top: 57px; color: #14388B; font-weight: bold;"/>
-                                    <p:commandButton id="btnArriba"  style="background-image: url(Imagenes/Iconos/rgatras.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; position: relative; left: 550px; top: -65px; width: 28px; height: 28px; text-align: center;"  value="" actionListener="#{controlComprobantes.anteriorEmpleado()}" disabled="#{controlComprobantes.estadoBtnArriba}" process="@this" />
-                                    <p:commandButton id="btnAbajo" styleClass="cssBotonesEmpleado" style="background-image: url(Imagenes/Iconos/rgsiguiente.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; position: relative; left: 550px; top: -65px; width: 28px; height: 28px; text-align: center;" value=""  actionListener="#{controlComprobantes.siguienteEmpleado()}" disabled="#{controlComprobantes.estadoBtnAbajo}" process="@this" />
+                                    <p:commandButton id="btnArriba" styleClass="cssBotonesEmpleado" style="background-image: url(Imagenes/Iconos/rgatras.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; position: relative; left: 550px; top: -65px; width: 28px; height: 28px; text-align: center;"  
+                                                     onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"
+                                                     value="" actionListener="#{controlComprobantes.anteriorEmpleado()}" disabled="#{controlComprobantes.estadoBtnArriba}" process="@this" />
+                                    <p:commandButton id="btnAbajo" styleClass="cssBotonesEmpleado" style="background-image: url(Imagenes/Iconos/rgsiguiente.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; position: relative; left: 550px; top: -65px; width: 28px; height: 28px; text-align: center;"
+                                                     onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"
+                                                     value=""  actionListener="#{controlComprobantes.siguienteEmpleado()}" disabled="#{controlComprobantes.estadoBtnAbajo}" process="@this" />
 
                                 </div>
                             </p:panel>
@@ -210,7 +214,7 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column id="fechaHastaSNE" headerText="#{msg['hasta']}" sortBy="#{solucionNodoEmpleado.fechahasta}" width="50" filterBy="#{solucionNodoEmpleado.fechahasta}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                <p:column id="fechaHastaSNE" headerText="#{msg['hasta']}" sortBy="#{solucionNodoEmpleado.fechahasta}" width="60" filterBy="#{solucionNodoEmpleado.fechahasta}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleado.fechahasta}" >
@@ -296,7 +300,7 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column id="fechaDesdeSNE" headerText="#{msg['desde']}" sortBy="#{solucionNodoEmpleado.fechadesde}" width="50"  filterBy="#{solucionNodoEmpleado.fechadesde}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                    
+                                <p:column id="fechaDesdeSNE" headerText="#{msg['desde']}" sortBy="#{solucionNodoEmpleado.fechadesde}" width="60"  filterBy="#{solucionNodoEmpleado.fechadesde}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                    
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleado.fechadesde}" >
@@ -313,7 +317,7 @@
                                     </p:cellEditor>
                                 </p:column> 
 
-                                <p:column id="fechaPagoSNE" headerText="#{msg['pago']}" sortBy="#{solucionNodoEmpleado.fechapago}" width="50" filterBy="#{solucionNodoEmpleado.fechapago}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                <p:column id="fechaPagoSNE" headerText="#{msg['pago']}" sortBy="#{solucionNodoEmpleado.fechapago}" width="60" filterBy="#{solucionNodoEmpleado.fechapago}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleado.fechapago}" >
@@ -459,7 +463,7 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column id="fechaHastaSNER" headerText="#{msg['hasta']}" sortBy="#{solucionNodoEmpleador.fechahasta}" width="50" filterBy="#{solucionNodoEmpleador.fechahasta}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                <p:column id="fechaHastaSNER" headerText="#{msg['hasta']}" sortBy="#{solucionNodoEmpleador.fechahasta}" width="60" filterBy="#{solucionNodoEmpleador.fechahasta}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleador.fechahasta}" >
@@ -534,7 +538,7 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column id="fechaDesdeSNER" headerText="#{msg['desde']}" sortBy="#{solucionNodoEmpleador.fechadesde}" width="50"  filterBy="#{solucionNodoEmpleador.fechadesde}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                    
+                                <p:column id="fechaDesdeSNER" headerText="#{msg['desde']}" sortBy="#{solucionNodoEmpleador.fechadesde}" width="60"  filterBy="#{solucionNodoEmpleador.fechadesde}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                    
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleador.fechadesde}" >
@@ -550,7 +554,7 @@
                                     </p:cellEditor>
                                 </p:column> 
 
-                                <p:column id="fechaPagoSNER" headerText="#{msg['pago']}" sortBy="#{solucionNodoEmpleador.fechapago}" width="50" filterBy="#{solucionNodoEmpleador.fechapago}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                <p:column id="fechaPagoSNER" headerText="#{msg['pago']}" sortBy="#{solucionNodoEmpleador.fechapago}" width="60" filterBy="#{solucionNodoEmpleador.fechapago}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{solucionNodoEmpleador.fechapago}" >
@@ -613,7 +617,7 @@
                     <p:dialog id="buscarEmpleadoDialogo" header="#{msg['empleados']}" widgetVar="buscarEmpleadoDialogo"  resizable="false" draggable="false" modal="true" width="732"  closable="false">  
                         <p:dataTable  id="lovEmpleados" style="width: 700px" var="parametro" value="#{controlComprobantes.listaParametrosLOV}"
                                       scrollable="true" scrollHeight="225" scrollWidth="716" widgetVar="lovEmpleados" liveScroll="true" scrollRows="20" 
-                                      filteredValue="#{controlComprobantes.filtradoListaParametrosLOV}" emptyMessage="#{msg['lovvacio']}"
+                                      filteredValue="#{controlComprobantes.filtradoListaParametrosLOV}" emptyMessage="#{msg['lovvacio']}" 
                                       rowKey="#{parametro.empleado.secuencia}" selection="#{controlComprobantes.parametroSeleccionado}" selectionMode="single" >
 
                             <p:ajax event="rowSelect" listener="#{controlComprobantes.activarAceptar()}" update=":formularioDialogos:aceptarP"/>
@@ -840,6 +844,11 @@
                         <p:inputTextarea value="#{controlComprobantes.solucionNodoEmpleadorSeleccionada.ultimamodificacion}" style="overflow: auto; width: 360px; height: 60px" readonly="true">                        
                             <f:convertDateTime pattern="dd/MM/yyyy"/>
                         </p:inputTextarea>
+                    </p:dialog>
+                    
+                    <p:dialog id="operacionEnProceso" header="#{msg['informacion']}" widgetVar="operacionEnProceso"  resizable="false" draggable="false" modal="true" height="65" width="350px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/Iconos/cargando.gif" width="50" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="#{msg['operacionProceso']}" style="font-size: 12px; position: absolute; left: 95px; top: 20px; width: 240px; font-weight:bold;" />
                     </p:dialog>
                     
                 </h:form>
