--- a/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
@@ -296,7 +296,8 @@
                             <h:outputText id="informacionRegistro" value="#{msg['infoRegistro']} #{controlParametro.infoRegistro}" style="position: relative; left: 10px; top: 0px; font-weight: bold; display: block;"/>
                             
                             <p:commandButton icon="ui-icon-extlink" style="display: inline-block; position: relative; left: 0px; top: 0px; height: 30px; width: 130px; background-image: url(Imagenes/Iconos/boton.png); color: white;
-                                             background-size: 100% 100%; background-repeat: no-repeat; border: none;" disabled="#{controlParametro.borrarTodos}" id="quitarTodos" value="Quitar Todos" actionListener="#{controlParametro.borrarParametros()}" process="@this"/>
+                                             background-size: 100% 100%; background-repeat: no-repeat; border: none;" disabled="#{controlParametro.borrarTodos}" id="quitarTodos" value="Quitar Todos"
+                                             actionListener="#{controlParametro.borrarParametros()}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" process="@this"/>
                             <p:tooltip  for="quitarTodos" value="#{msg['quitartodos']}" />
 
                             <p:commandButton icon="ui-icon-extlink" style="display: inline-block; position: relative; left: 0px; top: 0px; height: 30px; width: 130px; background-image: url(Imagenes/Iconos/boton.png); color: white;
@@ -552,7 +553,8 @@
                         <h:graphicImage value="Imagenes/Iconos/alerta.png" width="100" height="80" style="position: absolute; left: 20px; top: 20px;"  />
                         <h:outputText value="#{msg['confirmarAdicionarEmpleados1']} #{controlParametro.empleadosParametrizados} #{msg['confirmarAdicionarEmpleados2']}" style="position: absolute; left: 135px; top: 20px; width: 270px; font-weight:bold; text-align: justify" />
                         <h:outputText value="#{msg['deseacontinuar']}" style="position: absolute; left: 100px; top: 95px; width: 300px; font-weight:bold; text-align: center" />
-                        <p:commandButton value="#{msg['aceptar']}" onclick="confirmarAdicionarEmpleados.hide();" actionListener="#{controlParametro.adicionarEmpleados()}" 
+                        <p:commandButton value="#{msg['aceptar']}" onclick="confirmarAdicionarEmpleados.hide(); operacionEnProceso.show()" oncomplete=" operacionEnProceso.hide()"
+                                         actionListener="#{controlParametro.adicionarEmpleados()}" 
                                          style="position: absolute; top: 120px; left: 210px; " process="@this" icon="ui-icon-check"/>
                         <p:commandButton value="#{msg['cancelar']}" onclick="confirmarAdicionarEmpleados.hide();" style="position: absolute; top: 120px; left: 310px" process="@this" icon="ui-icon-close"/>
                     </p:dialog>
